--- a/templates/battle.html
+++ b/templates/battle.html
@@ -6,15 +6,18 @@
 </head>
 <body>
     <h1>Battle</h1>
-    <p>Choose an item to use:</p>
+    <p>Enemy Health: {{ enemy_health }}</p>
+    <p>{{ message }}</p>
     <form method="post">
-        <select name="item">
+        <button type="submit" name="action" value="attack">Attack</button>
+        <button type="submit" name="action" value="defend">Defend</button>
+        <select name="action">
+            <option value="" disabled selected>Use Item</option>
             {% for item in character.inventory %}
-                <option value="{{ item }}">{{ item }}</option>
+                <option value="use {{ item }}">{{ item }}</option>
             {% endfor %}
         </select>
         <button type="submit">Use Item</button>
     </form>
-    <a href="{{ url_for('status') }}">Back to Status</a>
 </body>
 </html>
