--- a/templates/battle.html
+++ b/templates/battle.html
@@ -6,7 +6,9 @@
 </head>
 <body>
     <h1>Battle</h1>
-    <p>Enemy Health: {{ enemy_health }}</p>
+    <p><strong>{{ character.name }}'s Health:</strong> {{ character.health }}</p>
+    <p><strong>Enemy Health:</strong> {{ enemy_health }}</p>
+    <hr>
     <p>{{ message }}</p>
     <form method="post">
         <button type="submit" name="action" value="attack">Attack</button>
@@ -19,5 +21,8 @@
         </select>
         <button type="submit">Use Item</button>
     </form>
+    {% if enemy_action %}
+    <p><strong>Enemy {{ enemy_action }}</strong></p>
+    {% endif %}
 </body>
 </html>
