--- a/templates/status.html
+++ b/templates/status.html
@@ -13,6 +13,7 @@
     <p><strong>Inventory:</strong> {{ character.inventory | join(', ') }}</p>
     <p>{{ message }}</p>
     <a href="{{ url_for('travel') }}">Travel</a>
+    <a href="{{ url_for('rest') }}">Rest</a>
     <a href="{{ url_for('index') }}">Restart</a>
 </body>
 </html>
