--- a/templates/status.html
+++ b/templates/status.html
@@ -10,7 +10,21 @@
     <p><strong>Health:</strong> {{ character.health }}</p>
     <p><strong>Experience:</strong> {{ character.experience }}</p>
     <p><strong>Level:</strong> {{ character.level }}</p>
-    <p><strong>Inventory:</strong> {{ character.inventory | join(', ') }}</p>
+    <p><strong>Inventory:</strong>
+        <ul>
+            {% for item in character.inventory %}
+                <li>
+                    {% if item['type'] == 'Sword' %}
+                        Sword: {{ item['name'] }} (Damage: {{ item['damage_range'][0] }}-{{ item['damage_range'][1] }}, Durability: {{ item['durability'] }})
+                    {% elif item['type'] == 'Shield' %}
+                        Shield: {{ item['name'] }}
+                    {% else %}
+                        {{ item['name'] }}
+                    {% endif %}
+                </li>
+            {% endfor %}
+        </ul>
+    </p>
     <p>{{ message }}</p>
     <a href="{{ url_for('travel') }}">Travel</a>
     <a href="{{ url_for('rest') }}">Rest</a>
